# WeaR-studio

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_output.txt  ridthewann-instructions.md
.github/: ridthewann-instructions.md
cmake/: FindFFMPEG.cmake
core/: CMakeLists.txt  CaptureManager.cpp  CaptureManager.h  EncoderManager.cpp  EncoderManager.h  IFilter.h  IPlugin.h  ISource.h  PluginManager.cpp  PluginManager.h  Scene.cpp  Scene.h  SceneItem.cpp  SceneItem.h  SceneManager.cpp  SceneManager.h  StreamManager.cpp  StreamManager.h
docs/: ARCHITECTURE.md  overview.md
plugins/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h  ExamplePlugin.json
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  WeaRApp.cpp  WeaRApp.h  main.cpp
